--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ body {
   margin-right: auto;
 }
 
-.form-control {
+.gc-emp-card .form-control {
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
@@ -170,7 +170,11 @@ a.list-group-item {
     border-top-right-radius: 0px;
 }
 
-.gc-schedule {
+.gc-admin-menu-item {
+  padding-left: .75rem;
+}
+
+.gc-dashboard-module {
   padding: 1rem;
 }
 
@@ -254,9 +258,246 @@ a.list-group-item {
   width: 70px;
   max-width: 100%;
   margin-left: auto;
+  padding-top: 0px;
+  padding-bottom: .4rem;
+  padding-left: .9rem;
+  padding-right: .9rem;
+  text-decoration: underline;
+}
+
+.gc-bulletin-new-btn {
+  display: block;
+  width: 150px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
   padding: .4rem .9rem;
 }
 
+/*=======================*/
+/*=== Schedule Editor ===*/
+/*=======================*/
+
+.gc-schedule-editor > div.acf-input {
+  max-width: 100%;
+}
+
+.gc-schedule-editor > div.acf-input > div > table > thead > tr > th.acf-th {
+  text-align: center;
+}
+
+.gc-schedule-editor > div > div > table > tbody > tr > td.acf-field-group {
+  padding: 0px;
+}
+
+.gc-schedule-editor > div > div > table > tbody > tr > td.acf-field-group > div > div > div.acf-field-date-picker {
+  padding: 5px;
+}
+
+.gc-schedule-editor > div > div > table > tbody > tr > td.acf-field-group > div > div > div.acf-field-date-picker {
+  text-align: center;
+}
+
+input.hasDatepicker {
+  text-align: center;
+}
+
+div.acf-field-repeater {
+  padding: 0px;
+}
+
+.gc-schedule-edit {
+  display: grid;
+  grid-template-columns: repeat(5, 2fr) 1fr;
+  grid-template-rows: repeat(5, 1fr);
+  grid-gap: .5rem;
+}
+
+.gc-emp-error {
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: auto;
+}
+
+.gc-add-week {
+  grid-column: 1/2;
+}
+
+.gc-week-header {
+  max-width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.gc-sched-day {
+  font-size: 16px;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.gc-sched-day > * {
+  margin-top: .5rem;
+  margin-bottom: .5rem;
+}
+
+.gc-sched-day-head > h5 {
+  font-size: 18px;
+}
+
+button.gc-edit-week {
+  color: rgb(107, 107, 106);
+}
+
+.gc-shifts-modal {
+  max-width: 600px;
+}
+
+.gc-sched-shifts {
+  padding: 5px;
+}
+
+.gc-sched-shifts > form.acf-form > div.acf-fields > div.acf-field > div.acf-label {
+  display: none;
+}
+
+.gc-sched-shifts table.acf-table,
+.gc-sched-shifts table.acf-table * {
+  border-width: 0px;
+  border-style: none;
+  text-align: center;
+}
+
+.gc-sched-shifts table.acf-table > thead > tr > th:nth-child(2),
+.gc-sched-shifts table.acf-table > tbody > tr > td:nth-child(2) * {
+  text-align: left;
+}
+
+.gc-sched-shifts table.acf-table > tbody > tr.acf-row > td > div.acf-input {
+  box-shadow: 0 1px 2px #aaa;
+  border-radius: 2px;
+}
+
+.gc-sched-shifts table.acf-table > tbody > tr.acf-row > td > div.acf-input * {
+  height: 40px;
+}
+
+.gc-sched-shifts table.acf-table > tbody > tr.acf-row > td > div.acf-input span.select2-selection__rendered {
+  display: flex;
+  align-items: center;
+}
+
+.gc-sched-shifts table.acf-table > tbody > tr.acf-row > td.acf-field-time-picker > div.acf-input {
+  width: 75%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.gc-sched-shifts table.acf-table > tbody > tr.acf-row > td.acf-row-handle.remove {
+  background: #fff;
+}
+
+.gc-sched-shifts .acf-repeater .acf-row-handle .acf-icon.-minus {
+  display: block;
+  background: #dc3545;
+  color: #fff;
+}
+
+.acf-tooltip.-confirm a.-red {
+  color: #dc3545;
+}
+
+.acf-tooltip.-confirm {
+  font-size: 16px;
+  left: 639px !important;
+}
+
+.gc-sched-shifts div.acf-actions > a.acf-button {
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  user-select: none;
+  border: 1px solid transparent;
+  padding: .5rem .75rem;
+  font-size: 1rem;
+  line-height: 1.25;
+  border-radius: .25rem;
+  transition: all .15s ease-in-out;
+  color: #868e96;
+  background-color: transparent;
+  background-image: none;
+  border-color: #868e96;
+  -webkit-appearance: button;
+  overflow: visible;
+}
+
+span.select2-search--dropdown {
+  display: none;
+}
+
+.ui-timepicker-div.ui-timepicker-oneLine dl dd.ui_tpicker_second {
+  display: none;
+}
+
+.acf-field-date-picker {
+  border-top-width: 0px !important;
+}
+
+.acf-field-date-picker > div.acf-label {
+  text-align: center;
+}
+
+
+#new_week_form > .acf-form-fields,
+.gc-edit-week-modal form.acf-form > .acf-form-fields {
+  display: grid;
+  grid-template-columns:  repeat(5, 1fr);
+}
+
+#new_week_form .acf-field--post-title,
+.gc-edit-week-modal form.acf-form .acf-field--post-title {
+  grid-column: 1/6;
+}
+
+#new_week_form .acf-field--post-title .acf-input-wrap,
+#new_week_form .acf-date-picker,
+.gc-edit-week-modal form.acf-form .acf-field--post-title .acf-input-wrap,
+.gc-edit-week-modal form.acf-form .acf-date-picker {
+  box-shadow: 0 1px 2px #aaa;
+  border-radius: 2px;
+}
+
+#new_week_form .acf-field--post-title .acf-input-wrap > input,
+#new_week_form .acf-date-picker > input,
+.gc-edit-week-modal form.acf-form .acf-field--post-title .acf-input-wrap > input,
+.gc-edit-week-modal form.acf-form .acf-date-picker > input {
+  height: 40px;
+}
+
+.ui-timepicker-container.ui-timepicker-standard {
+  z-index: 1051 !important;
+}
+
+.gc-time-input {
+  max-width: 150px;
+}
+
+.acf-form-submit {
+  display: flex;
+  justify-content: center;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.modal-body {
+  color: rgb(107, 107, 106);
+
+}
 /*=================*/
 /*=== Utilities ===*/
 /*=================*/
+
+.gc-mt-15 {
+  margin-top: 15px;
+}
