--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: https://willhawks.com/wordpress/gc-employees
 Author: Will Hawks
 Author URI: https://willhawks.com
 Description: Theme built for the employee section of the Good Citizen Website.
-Version: 1.2.0
+Version: 1.3.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: gc-employees
@@ -306,7 +306,14 @@ div.acf-field-repeater {
   padding: 0px;
 }
 
-.gc-schedule-edit {
+.gc-schedule-main {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  grid-gap: .7rem;
+}
+
+.gc-schedule-main-admin {
   display: grid;
   grid-template-columns: repeat(5, 2fr) 1fr;
   grid-template-rows: repeat(5, 1fr);
@@ -494,6 +501,83 @@ span.select2-search--dropdown {
   color: rgb(107, 107, 106);
 
 }
+
+
+/*==================*/
+/*=== Staff Page ===*/
+/*==================*/
+
+.gc-emp-profile {
+  padding: 3%;
+}
+
+form.acf-form > div.acf-fields > div.acf-field-text > div.acf-input,
+form.acf-form > div.acf-fields > div.acf-field-number > div.acf-input,
+form.acf-form > div.acf-fields > div.acf-field-email > div.acf-input {
+  box-shadow: 0 1px 2px #aaa;
+  border-radius: 2px;
+}
+
+form.acf-form > div.acf-fields > div.acf-field-text input,
+form.acf-form > div.acf-fields > div.acf-field-number input,
+form.acf-form > div.acf-fields > div.acf-field-email input {
+  height: 40px;
+}
+
+.acf-fields > .acf-field {
+  border-style: none !important;
+}
+
+.acf-field-true-false {
+  display: flex;
+}
+
+.acf-field-true-false > div.acf-label {
+  margin-right: 10px;
+}
+
+.gc-staff-list-item {
+  display: flex;
+  justify-content: center;
+  padding: 5px;
+}
+
+.gc-emp-pic {
+  max-width: 150px;
+  margin-right: 5px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.gc-emp-list-name {
+  margin-left: 5px;
+  color: #6B6B6A;
+}
+
+.gc-emp-collapse {
+  margin-bottom: 10px;
+}
+
+.gc-edit-emp-btn {
+  max-with: 50%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.gc-new-emp {
+  display: flex;
+  justify-content: center;
+  margin-top: 1rem;
+}
+
+.gc-delete-emp {
+  display: flex;
+  justify-content: center;
+}
+.gc-delete-emp-btn {
+}
+
+
 /*=================*/
 /*=== Utilities ===*/
 /*=================*/
